--- a/src/components/Featured/Featured.module.scss
+++ b/src/components/Featured/Featured.module.scss
@@ -12,6 +12,7 @@
   font-size: 18px;
   overflow: hidden;
   margin-bottom: 100px;
+  font-family: "Roboto", sans-serif;
 
   .opacity {
     background-color: rgba(0, 0, 0, 0.5);
@@ -29,11 +30,16 @@
     text-transform: uppercase;
     line-height: 1;
     font-size: 36px;
-    font-family: "Roboto", sans-serif;
   }
 
   .title {
+    padding-top: 100px;
     width: 80%;
     margin: 0 auto;
+
+    sub {
+      color: gray;
+      text-decoration: line-through;
+    }
   }
 }
