--- a/src/components/Carousel/Carousel.module.scss
+++ b/src/components/Carousel/Carousel.module.scss
@@ -1,13 +1,21 @@
+/* Carousel.css */
+
 .carousel {
-  position: relative;
   width: 100%;
-  margin-top: 30px;
+  position: relative;
+  z-index: 2;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  height: 400px;
+  color: #fff;
+  font-size: 18px;
   overflow: hidden;
-  text-align: center;
-  margin-bottom: -13px;
+  font-family: "Roboto", sans-serif;
 }
 
-.slide {
+.carousel .opacity {
   background-color: rgba(0, 0, 0, 0.5);
   width: 100%;
   height: 100%;
@@ -17,51 +25,21 @@
   z-index: 2;
 }
 
-img {
-  width: 95%;
-  height: 500px;
-}
-
-.prevButton,
-.nextButton {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  background-color: rgba(0, 0, 0, 0.5);
+.carousel h1 {
   color: #fff;
-  border: none;
-  padding: 10px 20px;
-  cursor: pointer;
-  font-size: 18px;
+  font-weight: 900;
+  text-transform: uppercase;
+  line-height: 1;
+  font-size: 36px;
 }
 
-.prevButton {
-  left: 10px;
+.carousel .title {
+  padding-top: 100px;
+  width: 80%; 
+  margin: 0 auto;
 }
 
-.nextButton {
-  right: 10px;
-}
-
-.bulletsContainer {
-  top: 95%;
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  margin-top: 10px;
-  right: 50%;
-}
-
-.bullet {
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  background-color: #ddd;
-  margin: 0 5px;
-  cursor: pointer;
-  transition: background-color 0.3s;
-}
-
-.activeBullet {
-  background-color: #000;
+.carousel .title sub {
+  color: gray;
+  text-decoration: line-through;
 }
