--- a/src/components/Carousel/Carousel.module.css
+++ b/src/components/Carousel/Carousel.module.css
@@ -1,17 +1,17 @@
-/* Carousel.css */
 .carousel {
   width: 100%;
   position: relative;
   z-index: 2;
-  background-size: cover;
+  background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  height: 400px;
+  height: 500px;
   color: #fff;
-  font-size: 18px;
   overflow: hidden;
-  font-family: "Roboto", sans-serif;
+}
+.carousel img {
+  width: 100%;
 }
 
 .carousel .opacity {
@@ -22,23 +22,4 @@
   left: 0;
   top: 0;
   z-index: 2;
-}
-
-.carousel h1 {
-  color: #fff;
-  font-weight: 900;
-  text-transform: uppercase;
-  line-height: 1;
-  font-size: 36px;
-}
-
-.carousel .title {
-  padding-top: 100px;
-  width: 80%;
-  margin: 0 auto;
-}
-
-.carousel .title sub {
-  color: gray;
-  text-decoration: line-through;
 }/*# sourceMappingURL=Carousel.module.css.map */
