--- a/src/components/Carousel/Carousel.module.css
+++ b/src/components/Carousel/Carousel.module.css
@@ -9,6 +9,7 @@
   height: 500px;
   color: #fff;
   overflow: hidden;
+  margin-bottom: -10px;
 }
 .carousel img {
   width: 100%;
@@ -22,4 +23,10 @@
   left: 0;
   top: 0;
   z-index: 2;
+}
+
+@media (max-width: 769px) {
+  .carousel {
+    height: auto;
+  }
 }/*# sourceMappingURL=Carousel.module.css.map */
