--- a/src/components/Banners/Banners.module.css
+++ b/src/components/Banners/Banners.module.css
@@ -9,7 +9,7 @@
 }
 .banners ul {
   display: flex;
-  flex-wrap: wrap;
+  padding: 0;
 }
 
 .bannerOverlay {
@@ -58,8 +58,6 @@
   margin-right: 2px;
   overflow: hidden;
   text-align: center;
-  width: 100%;
-  max-width: 479px;
   height: auto;
 }
 
@@ -118,5 +116,6 @@
 @media (max-width: 769px) {
   ul {
     padding: 10px 0px;
+    flex-wrap: wrap;
   }
 }/*# sourceMappingURL=Banners.module.css.map */
