--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 .footer {
   width: 100%;
   display: flex;
@@ -7,6 +6,10 @@
   background-color: #172134;
   padding: 60px 0 35px 0;
   font-family: "Roboto", sans-serif;
+}
+.footer .dropdown {
+  display: none;
+  margin: 10px;
 }
 
 .links {
@@ -47,6 +50,10 @@
   opacity: 0.8;
   color: #fff;
   text-decoration: none;
+}
+
+h3 {
+  text-align: center;
 }
 
 .contacts {
@@ -108,48 +115,51 @@
 .social h3 {
   color: #fff;
 }
+.social .icons {
+  text-align: center;
+}
 .social .icons a {
   color: #fff;
   font-size: 30px;
 }
-.social hr {
-  border-color: rgba(255, 255, 255, 0.15);
-  margin-top: 5px;
-}
 
 .copyright {
   display: flex;
+  flex-direction: column;
+  text-align: center;
   justify-content: center;
   background-color: #172134;
-  border-top: 1px solid grey;
 }
 .copyright h3 {
   font-size: 14px;
+  opacity: 0.8;
   font-family: "Roboto", sans-serif;
   color: #fff;
   margin-top: 25px;
 }
+.copyright hr {
+  border-color: rgba(255, 255, 255, 0.1);
+  margin-top: 5px;
+  width: 85%;
+  margin: 0 auto;
+}
 
-/* Mobil cihazlar için özel stiller */
 @media screen and (max-width: 768px) {
   .footer {
     flex-direction: column;
     align-items: center;
   }
-  .footer div {
-    width: 100%;
-    margin: 10px 0;
-    text-align: center;
+  .footer .desktop {
+    display: none;
   }
-  .links h2,
-  .categories h2,
-  .contacts h2,
-  .social h2 {
-    font-size: 18px;
-    margin-top: 20px;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
+  .footer .dropdown {
+    display: block;
+  }
+  .footer .dropdown button {
+    padding: 12px;
+    color: #fff;
+    background-color: transparent;
+    border: 1px solid grey;
   }
   .links ul,
   .categories ul,
