--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -177,7 +177,8 @@ h3 {
       display: block;
 
       button {
-        padding: 12px;
+        padding: 15px;
+        width: 350px;
         color: #fff;
         background-color: transparent;
         border: 1px solid grey;
