--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -156,7 +156,8 @@ h3 {
     display: block;
   }
   .footer .dropdown button {
-    padding: 12px;
+    padding: 15px;
+    width: 350px;
     color: #fff;
     background-color: transparent;
     border: 1px solid grey;
