--- a/src/components/Main_Header/Main_Header.module.scss
+++ b/src/components/Main_Header/Main_Header.module.scss
@@ -10,6 +10,7 @@ body {
   align-items: center;
   justify-content: space-between;
   background-color: #004dda;
+  z-index: 3;
 
   img {
     width: 100%;
@@ -80,8 +81,7 @@ body {
 
   .container ul.menuOpen {
     padding-top: 10px;
-
-    display: flex;
+    display: block;
   }
 
   .container ul li {
