--- a/src/components/Carousel/Carousel.module.css
+++ b/src/components/Carousel/Carousel.module.css
@@ -2,7 +2,7 @@
   width: 100%;
   position: relative;
   z-index: 2;
-  background-size: contain;
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -10,9 +10,29 @@
   color: #fff;
   overflow: hidden;
   margin-bottom: -10px;
+  transition: all 0.5s ease-in-out;
 }
 .carousel img {
   width: 100%;
+  transition: transform 0.5s ease-in-out;
+}
+.carousel .title {
+  position: absolute;
+  top: 30%;
+  left: 5%;
+  color: white;
+  z-index: 3;
+  font-weight: 900;
+  text-transform: uppercase;
+  line-height: 1;
+  font-family: "Roboto", sans-serif;
+}
+.carousel .title h1 {
+  font-size: 46px;
+  width: 80%;
+}
+.carousel .title p {
+  font-size: 21px;
 }
 
 .carousel .opacity {
@@ -25,8 +45,43 @@
   z-index: 2;
 }
 
+.carouselDots {
+  position: absolute;
+  top: 90%;
+  left: 48%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.dot {
+  width: 12px;
+  height: 12px;
+  background-color: transparent;
+  border: 2px solid #fff;
+  border-radius: 50%;
+  margin: 0 5px;
+  cursor: pointer;
+}
+
+.activeDot {
+  width: 12px;
+  height: 12px;
+  background-color: #004dda;
+  border-radius: 50%;
+  margin: 0 5px;
+  cursor: pointer;
+}
+
 @media (max-width: 769px) {
   .carousel {
-    height: auto;
+    height: 420px;
+  }
+  .carousel img {
+    width: auto;
+  }
+  .carousel h1 {
+    font-size: 42px;
   }
 }/*# sourceMappingURL=Carousel.module.css.map */
