--- a/src/components/Products/Products.module.scss
+++ b/src/components/Products/Products.module.scss
@@ -1,50 +1,37 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto:400,500,700");
-
-.title {
-  margin-top: 60px;
-  position: relative;
-  text-align: center;
-
-  h2 {
-    font-size: 36px;
-    font-size: 2.25rem;
-    font-weight: 500;
-    margin: 0;
-    position: relative;
-    z-index: 2;
-  }
-
-  span {
-    display: block;
-    position: absolute;
-    text-align: center;
-    margin-top: -15px;
-    top: 0;
-    font-weight: 900;
-    font-size: 65px;
-    line-height: 1;
-    z-index: 1;
-    color: #f4f4f4;
-    text-transform: uppercase;
-    width: 100%;
-  }
-
-  p {
-    font-size: 1.4375rem;
-    font-weight: 300;
-    padding: 0 15%;
-    position: relative;
-    z-index: 2;
-  }
-}
-
 .products {
   display: flex;
   flex-wrap: wrap;
+
+  .details {
+    text-align: center;
+
+    button {
+      cursor: pointer;
+      background: none;
+      border: 2px solid;
+      font: inherit;
+      line-height: 1;
+      margin: 0.5em;
+      padding: 15px 32px;
+      color: #004dda;
+      transition: 0.25s;
+
+      &:hover,
+      &:focus {
+        border-color: adjust-hue(#004dda, 10deg);
+        color: #fff;
+      }
+    }
+
+    .moreinfo:hover,
+    .moreinfo:focus {
+      box-shadow: inset 10rem 0 0 0 adjust-hue(#004dda, 20deg);
+    }
+  }
 }
 
 .product_card {
-  width: 380px;
+  width: 390px;
   position: relative;
   box-shadow: 0 2px 7px #dfdfdf;
   margin: 50px auto;
@@ -52,6 +39,7 @@
 }
 
 .badge {
+  z-index: 1;
   position: absolute;
   left: 0;
   top: 20px;
