--- a/src/components/Products_Details/Product_Details.module.scss
+++ b/src/components/Products_Details/Product_Details.module.scss
@@ -1,28 +1,28 @@
-.products {
-  display: flex;
-  flex-wrap: wrap;
-}
-.products .details {
+.details {
   text-align: center;
-}
-.products .details button {
-  cursor: pointer;
-  background: none;
-  border: 2px solid;
-  font: inherit;
-  line-height: 1;
-  margin: 0.5em;
-  padding: 15px 32px;
-  color: #004dda;
-  transition: 0.25s;
-}
-.products .details button:hover, .products .details button:focus {
-  border-color: #0029da;
-  color: #fff;
-}
-.products .details .moreinfo:hover,
-.products .details .moreinfo:focus {
-  box-shadow: inset 10rem 0 0 0 #0004da;
+
+  button {
+    cursor: pointer;
+    background: none;
+    border: 2px solid;
+    font: inherit;
+    line-height: 1;
+    margin: 0.5em;
+    padding: 15px 32px;
+    color: #004dda;
+    transition: 0.25s;
+
+    &:hover,
+    &:focus {
+      border-color: adjust-hue(#004dda, 10deg);
+      color: #fff;
+    }
+  }
+
+  .moreinfo:hover,
+  .moreinfo:focus {
+    box-shadow: inset 10rem 0 0 0 adjust-hue(#004dda, 20deg);
+  }
 }
 
 .product_card {
@@ -49,8 +49,7 @@
 .product_thumb img {
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   transform: translateZ(0);
   transition: transform 0.3s ease-in-out;
 }
@@ -71,8 +70,7 @@
 .product_thumb img {
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 .product_details {
@@ -153,7 +151,10 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+
+  h5 {
+    span {
+      color: #fbb72c;
+    }
+  }
 }
-.d_title h5 span {
-  color: #fbb72c;
-}/*# sourceMappingURL=Products.module.css.map */
