--- a/src/components/Top_Products/Top_Products.module.css
+++ b/src/components/Top_Products/Top_Products.module.css
@@ -1,32 +1,46 @@
+@import url("https://fonts.googleapis.com/css?family=Roboto:400,500,700");
+.title {
+  margin-top: 60px;
+  position: relative;
+  text-align: center;
+}
+.title h2 {
+  font-size: 36px;
+  font-size: 2.25rem;
+  font-weight: 500;
+  margin: 0;
+  position: relative;
+  z-index: 2;
+}
+.title span {
+  display: block;
+  position: absolute;
+  text-align: center;
+  margin-top: -15px;
+  top: 0;
+  font-weight: 900;
+  font-size: 65px;
+  line-height: 1;
+  z-index: 1;
+  color: #f4f4f4;
+  text-transform: uppercase;
+  width: 100%;
+}
+.title p {
+  font-size: 1.4375rem;
+  font-weight: 300;
+  padding: 0 15%;
+  position: relative;
+  z-index: 2;
+}
+
 .products {
   display: flex;
   flex-wrap: wrap;
 }
-.products .details {
-  text-align: center;
-}
-.products .details button {
-  cursor: pointer;
-  background: none;
-  border: 2px solid;
-  font: inherit;
-  line-height: 1;
-  margin: 0.5em;
-  padding: 15px 32px;
-  color: #004dda;
-  transition: 0.25s;
-}
-.products .details button:hover, .products .details button:focus {
-  border-color: #0029da;
-  color: #fff;
-}
-.products .details .moreinfo:hover,
-.products .details .moreinfo:focus {
-  box-shadow: inset 10rem 0 0 0 #0004da;
-}
 
 .product_card {
-  width: 390px;
+  width: 380px;
   position: relative;
   box-shadow: 0 2px 7px #dfdfdf;
   margin: 50px auto;
@@ -156,4 +170,27 @@
 }
 .d_title h5 span {
   color: #fbb72c;
-}/*# sourceMappingURL=Products.module.css.map */
+}
+
+.details {
+  text-align: center;
+}
+.details button {
+  cursor: pointer;
+  background: none;
+  border: 2px solid;
+  font: inherit;
+  line-height: 1;
+  margin: 0.5em;
+  padding: 15px 32px;
+  color: #004dda;
+  transition: 0.25s;
+}
+.details button:hover, .details button:focus {
+  border-color: #0029da;
+  color: #fff;
+}
+.details .moreinfo:hover,
+.details .moreinfo:focus {
+  box-shadow: inset 10rem 0 0 0 #0004da;
+}/*# sourceMappingURL=Top_Products.module.css.map */
