--- a/src/components/Top_Products/Top_Products.module.scss
+++ b/src/components/Top_Products/Top_Products.module.scss
@@ -1,32 +1,50 @@
+@import url("https://fonts.googleapis.com/css?family=Roboto:400,500,700");
+
+.title {
+  margin-top: 60px;
+  position: relative;
+  text-align: center;
+
+  h2 {
+    font-size: 36px;
+    font-size: 2.25rem;
+    font-weight: 500;
+    margin: 0;
+    position: relative;
+    z-index: 2;
+  }
+
+  span {
+    display: block;
+    position: absolute;
+    text-align: center;
+    margin-top: -15px;
+    top: 0;
+    font-weight: 900;
+    font-size: 65px;
+    line-height: 1;
+    z-index: 1;
+    color: #f4f4f4;
+    text-transform: uppercase;
+    width: 100%;
+  }
+
+  p {
+    font-size: 1.4375rem;
+    font-weight: 300;
+    padding: 0 15%;
+    position: relative;
+    z-index: 2;
+  }
+}
+
 .products {
   display: flex;
   flex-wrap: wrap;
 }
-.products .details {
-  text-align: center;
-}
-.products .details button {
-  cursor: pointer;
-  background: none;
-  border: 2px solid;
-  font: inherit;
-  line-height: 1;
-  margin: 0.5em;
-  padding: 15px 32px;
-  color: #004dda;
-  transition: 0.25s;
-}
-.products .details button:hover, .products .details button:focus {
-  border-color: #0029da;
-  color: #fff;
-}
-.products .details .moreinfo:hover,
-.products .details .moreinfo:focus {
-  box-shadow: inset 10rem 0 0 0 #0004da;
-}
 
 .product_card {
-  width: 390px;
+  width: 380px;
   position: relative;
   box-shadow: 0 2px 7px #dfdfdf;
   margin: 50px auto;
@@ -49,8 +67,7 @@
 .product_thumb img {
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   transform: translateZ(0);
   transition: transform 0.3s ease-in-out;
 }
@@ -71,8 +88,7 @@
 .product_thumb img {
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 .product_details {
@@ -153,7 +169,37 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+
+  h5 {
+    span {
+      color: #fbb72c;
+    }
+  }
 }
-.d_title h5 span {
-  color: #fbb72c;
-}/*# sourceMappingURL=Products.module.css.map */
+
+.details {
+  text-align: center;
+
+  button {
+    cursor: pointer;
+    background: none;
+    border: 2px solid;
+    font: inherit;
+    line-height: 1;
+    margin: 0.5em;
+    padding: 15px 32px;
+    color: #004dda;
+    transition: 0.25s;
+
+    &:hover,
+    &:focus {
+      border-color: adjust-hue(#004dda, 10deg);
+      color: #fff;
+    }
+  }
+
+  .moreinfo:hover,
+  .moreinfo:focus {
+    box-shadow: inset 10rem 0 0 0 adjust-hue(#004dda, 20deg);
+  }
+}
