--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -6,7 +6,7 @@
   background-color: #172134;
   padding: 60px 0 35px 0;
   font-family: "Roboto", sans-serif;
-
+  bottom: 0;
   .dropdown {
     display: none;
     margin: 10px;
