--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -6,6 +6,7 @@
   background-color: #172134;
   padding: 60px 0 35px 0;
   font-family: "Roboto", sans-serif;
+  bottom: 0;
 }
 .footer .dropdown {
   display: none;
