--- a/src/components/Main_Header/Main_Header.module.scss
+++ b/src/components/Main_Header/Main_Header.module.scss
@@ -2,13 +2,14 @@
 
 body {
   margin: 0;
+  font-family: "Roboto";
 }
 
 .container {
   position: relative;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   background-color: #004dda;
   z-index: 3;
 
