--- a/src/components/Products_Details/Product_Details.module.scss
+++ b/src/components/Products_Details/Product_Details.module.scss
@@ -1,6 +1,6 @@
 .productsdetails {
   background-color: #f8f8f8;
-  padding-bottom: 200px;
+  padding-bottom: 50px;
 
   img {
     display: block;
@@ -14,7 +14,6 @@
     top: 20%;
     left: 10%;
     h1 {
-      font-family: "Roboto", sans-serif;
       margin: 0;
     }
 
@@ -22,7 +21,6 @@
       display: flex;
       list-style: none;
       padding: 0;
-      font-family: "Roboto", sans-serif;
 
       li {
         display: flex;
@@ -233,12 +231,77 @@
   .details {
     display: flex;
     justify-content: space-around;
-    background-color: #f8f8f8;
+    background-color: #f1f0f0;
+    font-family: "Roboto";
+
     padding: 60px 0 35px 0;
 
+    h1 {
+      color: #444;
+      font-size: 20px;
+      margin-bottom: 20px;
+      font-weight: 400;
+    }
+
     .detail_desc {
-      flex: 0 0 auto;
-      width: 50%;
+      width: 40%;
+
+      p {
+        margin-bottom: 20px;
+      }
+    }
+
+    .specifications {
+      width: 30%;
+
+      td {
+        width: 200px;
+        padding: 0.5rem 0.5rem;
+      }
+      .table {
+        border: solid;
+        background-color: rgb(0, 0, 0, 0.05);
+      }
+    }
+  }
+}
+
+@media (max-width: 767px) {
+  .productsdetails {
+    .detailtitle {
+      padding-left: 20px;
+      width: auto;
+      top: 0;
+      left: 0;
+      position: relative;
+    }
+
+    img {
+      padding-top: 0;
+      width: 100%;
+    }
+
+    .description {
+      flex-wrap: wrap;
+      .desc {
+        width: 100%;
+      }
+      .select {
+        width: 100%;
+      }
+    }
+
+    .details {
+      flex-wrap: wrap;
+      padding: 60px 20px 35px 20px;
+
+      .detail_desc {
+        width: 100%;
+      }
+
+      .specifications {
+        width: 100%;
+      }
     }
   }
 }
