--- a/src/components/Main_Header/Main_Header.module.scss
+++ b/src/components/Main_Header/Main_Header.module.scss
@@ -31,6 +31,46 @@ body {
       padding: 12px;
     }
   }
+
+  .dropbtn {
+    background-color: transparent;
+    color: white;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    padding-bottom: 5px;
+  }
+
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+
+  .dropdown_content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+  }
+
+  .dropdown_content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+
+  .dropdown_content a:hover {
+    background-color: #f1f1f1;
+  }
+
+  .dropdown:hover .dropdown_content {
+    display: block;
+    margin-top: 5px;
+  }
+
   .search_bar {
     position: relative;
     display: flex;
@@ -92,6 +132,7 @@ body {
   .container ul li a {
     color: #fff;
     text-decoration: none;
+    padding: 0 0 0 10px;
   }
 
   .container .menuIcon {
