--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,7 +1,7 @@
 .footer {
   width: 100%;
   display: flex;
-  flex-wrap: wrapx;
+  flex-wrap: wrap;
   justify-content: space-around;
   background-color: #172134;
   padding: 60px 0 35px 0;
@@ -176,12 +176,98 @@ h3 {
     .dropdown {
       display: block;
 
-      button {
-        padding: 15px;
-        width: 350px;
-        color: #fff;
-        background-color: transparent;
-        border: 1px solid grey;
+      .dropdown_container {
+        width: 200px;
+        border-radius: 3px;
+        margin: 40px auto;
+        min-height: 50px;
+        text-align: center;
+        position: relative;
+        ul {
+          list-style-type: none;
+          padding: 0;
+
+          a {
+            color: #000;
+          }
+        }
+        label {
+          position: relative;
+          display: block;
+          width: 100%;
+          font-size: 18px;
+          line-height: 50px;
+          cursor: pointer;
+          background: transparent;
+          color: white;
+          user-select: none;
+          padding-right: 10px;
+          &:hover {
+            background: transparent;
+          }
+          &:after {
+            content: "\203A";
+            position: absolute;
+            width: 40px;
+            font-size: 32px;
+            right: 0;
+            padding-left: 0px;
+            top: 0;
+            bottom: 0;
+            transform: rotate(90deg);
+          }
+        }
+        .content {
+          height: 0;
+          max-height: 0px;
+          margin: 0;
+          text-align: left;
+          overflow: hidden;
+          transition: 0.3s linear;
+          position: absolute;
+          z-index: 999;
+          background: #fff;
+          li {
+            padding: 3px 10px;
+            &:first-child {
+              padding-top: 10px;
+            }
+            &:last-child {
+              padding-bottom: 10px;
+            }
+          }
+        }
+        #drop {
+          display: none;
+          &:checked ~ .content {
+            height: auto;
+            width: 100%;
+            max-height: 900px;
+            overflow: hidden;
+          }
+        }
+        #drop2 {
+          display: none;
+          &:checked ~ .content {
+            height: auto;
+            width: 100%;
+            max-height: 900px;
+            overflow: hidden;
+          }
+        }
+        #drop3 {
+          display: none;
+          &:checked ~ .content {
+            height: auto;
+            width: 100%;
+            max-height: 900px;
+            overflow: hidden;
+
+            li {
+              color: #000;
+            }
+          }
+        }
       }
     }
   }
