--- a/src/components/Main_Header/Main_Header.module.css
+++ b/src/components/Main_Header/Main_Header.module.css
@@ -85,6 +85,175 @@ body {
   padding-right: 10px;
 }
 
+.close {
+  cursor: pointer;
+  background: none;
+  border: 2px solid;
+  font: inherit;
+  line-height: 1;
+  margin: 0.5em;
+  padding: 12px 25px;
+  color: #ff7f82;
+  transition: 0.25s;
+}
+.close:hover, .close:focus {
+  border-color: #ffdc7f;
+  color: #fff;
+  box-shadow: inset -3.5em 0 0 0 #ffdc7f, inset 3.5em 0 0 0 #ffdc7f;
+}
+
+.favoriteproduct {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.details {
+  text-align: center;
+}
+.details button {
+  cursor: pointer;
+  background: none;
+  border: 2px solid;
+  font: inherit;
+  line-height: 1;
+  margin: 0.5em;
+  padding: 15px 32px;
+  color: #004dda;
+  transition: 0.25s;
+}
+.details button:hover, .details button:focus {
+  border-color: #0029da;
+  color: #fff;
+}
+.details .moreinfo:hover,
+.details .moreinfo:focus {
+  box-shadow: inset 10rem 0 0 0 #0004da;
+}
+
+.product_card {
+  width: 390px;
+  position: relative;
+  box-shadow: 0 2px 7px #dfdfdf;
+  margin: 50px auto;
+  background: #fafafa;
+}
+
+.badge {
+  z-index: 1;
+  position: absolute;
+  left: 0;
+  top: 20px;
+  text-transform: uppercase;
+  font-size: 13px;
+  font-weight: 700;
+  background: red;
+  color: #fff;
+  padding: 3px 10px;
+}
+
+.product_thumb img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  transform: translateZ(0);
+  transition: transform 0.3s ease-in-out;
+}
+
+.product_card:hover .product_thumb img {
+  transform: scale(1.05);
+}
+
+.product_thumb {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 300px;
+  background: #f0f0f0;
+  overflow: hidden;
+}
+
+.product_thumb img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.product_details {
+  padding: 30px;
+}
+
+.product_catagory {
+  display: block;
+  font-size: 12px;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #ccc;
+}
+
+.product_details h4 a {
+  font-weight: 500;
+  display: block;
+  margin-bottom: 18px;
+  text-transform: uppercase;
+  color: #363636;
+  text-decoration: none;
+  transition: 0.3s;
+}
+
+.product_details h4 a:hover {
+  color: #fbb72c;
+}
+
+.product_details p {
+  font-size: 15px;
+  line-height: 22px;
+  margin-bottom: 18px;
+  color: #999;
+}
+
+.product_bottom-details {
+  overflow: hidden;
+  border-top: 1px solid #eee;
+  padding-top: 20px;
+}
+
+.product_bottom-details div {
+  float: left;
+  width: 50%;
+}
+
+.product_price {
+  font-size: 18px;
+  color: #fbb72c;
+  font-weight: 600;
+}
+
+.product_price small {
+  font-size: 80%;
+  font-weight: 400;
+  text-decoration: line-through;
+  display: inline-block;
+  margin-right: 5px;
+}
+
+.product_links {
+  text-align: right;
+}
+
+.product_links a {
+  display: inline-block;
+  margin-left: 5px;
+  color: #e1e1e1;
+  transition: 0.3s;
+  font-size: 17px;
+}
+
+.product_links a:hover {
+  color: #fbb72c;
+}
+
 @media (min-width: 1080px) {
   .menuIcon {
     display: none;
