--- a/src/components/Products/Products.module.scss
+++ b/src/components/Products/Products.module.scss
@@ -181,3 +181,15 @@
     width: 100%;
   }
 }
+
+.pagination {
+  display: flex;
+  justify-content: center;
+}
+
+.pagination a {
+  color: black;
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+}
