--- a/src/components/Main_Header/Main_Header.module.scss
+++ b/src/components/Main_Header/Main_Header.module.scss
@@ -149,10 +149,11 @@ body {
   }
 }
 .product_card {
-  width: 390px;
+  display: flex;
+  width: 100%;
   position: relative;
   box-shadow: 0 2px 7px #dfdfdf;
-  margin: 50px auto;
+  margin: 20px auto;
   background: #fafafa;
 }
 
@@ -172,7 +173,6 @@ body {
 .product_thumb img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
   transform: translateZ(0);
   transition: transform 0.3s ease-in-out;
 }
@@ -184,8 +184,8 @@ body {
 .product_thumb {
   display: flex;
   align-items: center;
+  width: 30%;
   justify-content: center;
-  height: 300px;
   background: #f0f0f0;
   overflow: hidden;
 }
@@ -193,7 +193,6 @@ body {
 .product_thumb img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
 }
 
 .product_details {
@@ -268,6 +267,12 @@ body {
 
 .product_links a:hover {
   color: #fbb72c;
+}
+
+.buttons {
+  display: flex;
+  align-self: center;
+  justify-content: space-between;
 }
 
 @media (min-width: 1080px) {
