--- a/src/components/Main_Header/Main_Header.module.scss
+++ b/src/components/Main_Header/Main_Header.module.scss
@@ -93,6 +93,7 @@ body {
       color: #fff;
       padding-left: 10px;
       padding-right: 10px;
+      align-items: center;
     }
   }
 }
@@ -269,6 +270,19 @@ body {
   color: #fbb72c;
 }
 
+.shoppingsize {
+  width: 17px;
+  height: 8px;
+  font-size: 10px;
+  border-radius: 50%;
+  text-align: center;
+  background-color: #083487;
+  margin-top: 25px;
+  padding-top: 4px;
+  padding-bottom: 7px;
+  margin-left: -10px;
+}
+
 .buttons {
   display: flex;
   align-self: center;
@@ -318,5 +332,12 @@ body {
     display: block;
     cursor: pointer;
     font-size: 25px;
+  }
+
+  .product_card {
+    display: block;
+  }
+  .product_thumb {
+    width: 100%;
   }
 }
